infrastructure/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headlamp.lan`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
